removing MaxPermSize as no longer correct in Java 8